Fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -385,7 +385,7 @@ li a {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  margin: 50px auto auto auto;
+  /* margin: 50px auto auto auto; */
   width: 70%;
   height: auto;
   padding: 30px;
@@ -404,7 +404,8 @@ li a {
   justify-content: center;
   border-radius: 5px;
   width: 380px;
-  margin: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   box-shadow: 0 2px 8px rgba(10, 29, 86, 0.2);
   overflow: hidden;
   transition: transform 0.6s ease-in-out;
@@ -2853,7 +2854,7 @@ li a {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin: 50px auto auto auto;
+    margin: 0px auto auto auto;
     width: 70%;
     height: auto;
     padding: 30px;
